# diagnostico_de_rede

./: .gitignore  README.md  diagnostico_rede.py  diagnostico_rede_interna.py  main.py  mtu_tester.py  pyproject.toml  requirements.txt
src/: __init__.py
src/config/: __init__.py  config_manager.py  default_config.yaml
src/exceptions/: __init__.py  network_exceptions.py
src/models/: __init__.py  isp_info.py  network_test.py  test_results.py
src/parsers/: __init__.py  mtr_parser.py  ping_parser.py  traceroute_parser.py
src/presenters/: __init__.py  console_presenter.py
src/services/: __init__.py  isp_detector.py  network_test_service.py  report_service.py
src/utils/: __init__.py  logger.py  validators.py
